<resources>
    <string name="action_next">Next</string>
    <string name="action_add">Add</string>
    <string name="label_password">Password</string>
    <string name="label_username">Username</string>
    <string name="hint_sms_code">Enter the code sent to your phone</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_steam_captcha">Enter the text above</string>
    <string name="hint_steam_steamguard">Login code</string>
    <string name="rate_limit_exceeded">RateLimitExceeded</string>
    <string name="remove_authenticator">Please remove the authenticator associated to this account.</string>
    <string name="phone_not_attached">Phone number not attached to account</string>
    <string name="description_steam_captcha">Image containing a captcha code</string>
    <string name="unexpected_error">UnexpectedError occurred</string>
    <string name="invalid_username_password">Invalid username or password</string>
    <string name="invalid_username">Username too short</string>
    <string name="hint_steam_email">A code was sent to your email at %1$s</string>

</resources>
